resetting states of cart, product, stock, order + retrieve last tid submitted by a tx worker